--- a/src/components/MouseCursor/MouseCursor.css
+++ b/src/components/MouseCursor/MouseCursor.css
@@ -10,4 +10,11 @@
     z-index: 999;
 }
 
+.MouseCursor .MouseCursorElement.isAnimated {
+    transition-duration: 250ms;
+    transition-timing-function: ease-out;
+    transition-property: all;
+    transform: translate(-50%, -50%);
+}
+
 
